// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuButton component matches snapshot (default props) 1`] = `
<WithStyles(Button)
  className="menuButton"
  variant="text"
>
  <Flex
    align="stretch"
    className="menuButton-inner"
    direction="column"
    noGutters={true}
  >
    <FlexItem
      className="menuButton-icon"
      shrink={false}
    >
      <span>
        🌭
      </span>
    </FlexItem>
    <FlexItem
      className="typemod--tiny menuButton-label"
      shrink={true}
    >
      My Label
    </FlexItem>
  </Flex>
</WithStyles(Button)>
`;

exports[`MenuButton component matches snapshot (set all props) 1`] = `
<WithStyles(Button)
  className="menuButton menuButton--disabled foo"
  disabled={true}
  onClick={[Function]}
  variant="text"
>
  <Flex
    align="stretch"
    className="menuButton-inner"
    direction="column"
    noGutters={true}
  >
    <FlexItem
      className="menuButton-icon"
      shrink={false}
    >
      <span>
        🌭
      </span>
    </FlexItem>
    <FlexItem
      className="typemod--tiny menuButton-label myCustomClass"
      shrink={true}
    >
      My Label
    </FlexItem>
  </Flex>
</WithStyles(Button)>
`;
